src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_40_1.deca
// Description:
//    regle 3.40, la classe donnee a instanceof doit exister
//
// Resultats:
//    Ligne 14: Undeclared type identifier : 'A'.


class C{

}

{
    C c = new C();
    if( c instanceof A){
        print("");
    }
}